--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     />
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
     <title>Document</title>
   </head>
 
@@ -529,7 +529,7 @@
               <div class="Introduction_pro_container1">
                 <text class="Introduction_pro"> Introducing Pro </text>
                 <div class="arrow5_container">
-                  <img class="arrow5" src="/img/arrow_5.svg" />
+                  <img class="arrow5" src="img/arrow_5.svg" />
                 </div>
               </div>
             </div>
@@ -551,7 +551,7 @@
                 <div class="alway_on_chat_img_container">
                   <img
                     class="alway_on_chat_img"
-                    src="/img/alway_on_chat_gpt__img.png"
+                    src="img/alway_on_chat_gpt__img.png"
                   />
                 </div>
                 <div class="alway_on_chat_text_container">
@@ -566,7 +566,7 @@
             <div class="alwaysOnChat">
               <div class="always_on_chat_gpt__container">
                 <div class="alway_on_chat_img_container">
-                  <img src="/img/chat_cloud_sync.png" />
+                  <img src="img/chat_cloud_sync.png" />
                 </div>
                 <div class="alway_on_chat_text_container">
                   <text class="default_header_text">Cloud Sync</text>
@@ -580,7 +580,7 @@
             <div class="alwaysOnChat">
               <div class="always_on_chat_gpt__container">
                 <div class="alway_on_chat_img_container">
-                  <img src="/img/custom_theme_and_more.png" />
+                  <img src="img/custom_theme_and_more.png" />
                 </div>
                 <div class="alway_on_chat_text_container">
                   <text class="default_header_text">Custom Themes & more</text>
@@ -595,7 +595,7 @@
           <div class="PutTheProFooter">
             <div class="footer_chat_gpt">
               <text class="default_footer_text">Learn about Raycast Pro</text>
-              <img src="/img/Link → SVG3.svg" />
+              <img src="img/Link → SVG3.svg" />
             </div>
           </div>
 
@@ -617,7 +617,7 @@
                 <div class="img9x_container">
                   <img
                     class="img9x_container"
-                    src="/img/search_npm_packages.png"
+                    src="img/search_npm_packages.png"
                   />
                 </div>
                 <div class="graduate_description">
